[gd_scene load_steps=5 format=3 uid="uid://c7q8p6a0l30lf"]

[ext_resource type="Theme" uid="uid://nc5ecqmt7j3g" path="res://Tools/tema/new_theme.tres" id="1_ua2jr"]
[ext_resource type="Script" uid="uid://br2jj2yncih0b" path="res://systems/Game_Menu/game_menu.gd" id="1_wlcv1"]
[ext_resource type="PackedScene" uid="uid://dbufcy3dd28sr" path="res://systems/Game_Menu/Settings/Settings.tscn" id="3_c3v2n"]
[ext_resource type="PackedScene" uid="uid://5u7mtlbqv4dg" path="res://systems/save_system/GUI/Save_menu.tscn" id="4_ka88v"]

[node name="Game Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlcv1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Main_Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main_Menu"]
layout_mode = 0
offset_right = 308.0
offset_bottom = 649.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Main_Menu/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Пауза"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38.165)
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
text = "Продолжить"

[node name="SaveLoad_Game" type="Button" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38.165)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Сохранить/Загрузить
Игру"

[node name="Options" type="Button" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38.165)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Настройки"

[node name="Exit Menu" type="Button" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38.165)
layout_mode = 2
size_flags_vertical = 3
text = "Выход в меню"

[node name="Exit game" type="Button" parent="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Выход из игры"

[node name="GUI" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1148.0
offset_bottom = 652.0
mouse_filter = 2
theme = ExtResource("1_ua2jr")

[node name="Settings" parent="CanvasLayer/GUI" instance=ExtResource("3_c3v2n")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 547.0
offset_bottom = 648.0

[node name="SaveMenu" parent="CanvasLayer/GUI" instance=ExtResource("4_ka88v")]
visible = false
layout_mode = 1
offset_left = -391.0
offset_top = -2.0
offset_right = -741.0
offset_bottom = -382.0

[node name="Pause" type="Button" parent="CanvasLayer"]
offset_left = 1.0
offset_right = 57.0
offset_bottom = 31.0
text = "Пауза"

[node name="Load_visible" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="toggled" from="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer/SaveLoad_Game" to="." method="_on_save_game_toggled"]
[connection signal="toggled" from="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_toggled"]
[connection signal="pressed" from="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer/Exit Menu" to="." method="_on_exit_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Main_Menu/PanelContainer/HBoxContainer/VBoxContainer/Exit game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause" to="." method="_on_button_pressed"]
